# feedreader3

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
feedreader3/: database.py  dependencies.py  exception_handlers.py  main.py  scheduler.py  settings.py  worker.py
feedreader3/jobs/: fetch_feeds_job.py
feedreader3/models/: feed_entry.py  feed_source.py
feedreader3/routers/: feed_entries.py  feed_sources.py  health.py
initdb/: create-test-db.sql
tests/: .env.test  atom10.xml  atom11.xml  atom12.xml  conftest.py  test_exception_handlers.py  test_main.py  test_scheduler.py  test_settings.py
tests/jobs/: atom13.xml  atom14.xml  test_fetch_feeds_job.py
tests/models/: test_feed_source.py
tests/routers/: test_feed_entries.py  test_feed_sources.py  test_health.py
