[project]
name = "feedreader3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.1",
    "fastapi[standard]>=0.121.1",
    "feedparser>=6.0.12",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "coverage>=7.11.3",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]

[tool.uv]
package = true

[tool.pytest]
norecursedirs = ["db-data"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["feedreader3"]

[tool.coverage.report]
show_missing = true
